--- a/lesson 2/my/lesson 4.ipynb
+++ b/lesson 2/my/lesson 4.ipynb
@@ -873,6 +873,112 @@
     "z = x + (y << 3) - y * 4 + x / 4\n",
     "z"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lemi', 'Liben', 'Leul']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Lemi', 'Liben', 'Fita', 'Faye', 'Leul']\n",
+    "l_names = []\n",
+    "for name in names:\n",
+    "    if 'L' in name:\n",
+    "        l_names.append(name)\n",
+    "    else:\n",
+    "        continue\n",
+    "print(l_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lemi', 'Liben', 'Leul']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = ['Lemi', 'Liben', 'Fita', 'Faye', 'Leul']\n",
+    "l_names = [name for name in names if 'L' in name]\n",
+    "l_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tiger', 'Lion', 'Elephant', 'Monkey', 'Frog']\n"
+     ]
+    }
+   ],
+   "source": [
+    "animals = ['tiger', 'lion', 'elephant', 'monkey', 'frog']\n",
+    "f_animals = []\n",
+    "for animal in animals:\n",
+    "    f_animals.append(animal.title())\n",
+    "print(f_animals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FROG']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animals = ['tiger', 'lion', 'elephant', 'monkey', 'frog']\n",
+    "k_animals = [animal for animal in animals]\n",
+    "k_animals = [animal.upper()]\n",
+    "k_animals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
