--- a/lesson 2/assignment.ipynb
+++ b/lesson 2/assignment.ipynb
@@ -1,26 +1,153 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Convert a temperature from Celsius to Fahrenheit."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (674669660.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    y = str(x)(::-1)\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "212.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input())\n",
+    "a = 1.8\n",
+    "y = a*x + 32\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Check if a given string is a palindrome."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is Palindrome.\n"
      ]
     }
    ],
    "source": [
     "x = input()\n",
-    "y = str(x)(::-1)\n",
-    "if x = y:\n",
-    "    print('yes')\n",
+    "x = x.lower()\n",
+    "y = x[::-1]\n",
+    "if x==y:\n",
+    "    print('It is Palindrome.')\n",
     "else:\n",
-    "    print('no')"
+    "    print('It is not Palindrome.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Calculate the power of a number given the base and exponent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = int(input())\n",
+    "a = int(input())\n",
+    "y = x**a\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Find the smallest number in a given list of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 4, 36, 728, 3837, 76, 8, 9, 6]\n",
+    "minval = float('inf')\n",
+    "for a in x:\n",
+    "    if minval < a:\n",
+    "        continue\n",
+    "    else:\n",
+    "        minval = a\n",
+    "print(minval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Count the number of consonants in a given string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input()\n",
+    "cnt = 0\n",
+    "X = x.lower()\n",
+    "for b in x:\n",
+    "    if b != 'a' and b != 'i' and b != 'e' and b != 'o' and b != 'u':\n",
+    "        cnt = cnt + 1\n",
+    "    else:\n",
+    "        continue\n",
+    "print(cnt)"
    ]
   }
  ],
